--- a/fixtures/vcr_cassettes/pubmed_harvester_spec_find_by_pmid_through_pubmed.yml
+++ b/fixtures/vcr_cassettes/pubmed_harvester_spec_find_by_pmid_through_pubmed.yml
@@ -164,113 +164,6 @@ http_interactions:
   recorded_at: Sat, 09 Aug 2014 00:22:12 GMT
 - request:
     method: post
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>&lt;query
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"&gt;\n\t
-        \           &lt;Criterion ConjunctionOperator=\"AND\"&gt;\n\t              &lt;Criteria&gt;\n\t
-        \               &lt;Criterion&gt;\n\t                  &lt;Filter&gt;\n\t
-        \                   &lt;Column&gt;PMID&lt;/Column&gt;\n\t                    &lt;Operator&gt;In&lt;/Operator&gt;\n\t
-        \                   &lt;Values&gt;&lt;Value&gt;24930130&lt;/Value&gt;&lt;/Values&gt;\n\t
-        \                 &lt;/Filter&gt;\n\t                &lt;/Criterion&gt;\n\t
-        \             &lt;/Criteria&gt;\n\t            &lt;/Criterion&gt;\n\t            &lt;Columns&gt;\n\t
-        \             &lt;SortColumn&gt;\n\t                &lt;Column&gt;Rank&lt;/Column&gt;\n\t
-        \               &lt;Direction&gt;Descending&lt;/Direction&gt;\n\t              &lt;/SortColumn&gt;\n\t
-        \           &lt;/Columns&gt;\n\t            &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;\n\t
-        \         &lt;/query&gt;</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-      Expect:
-      - 100-continue
-      Content-Type:
-      - text/xml
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Sat, 09 Aug 2014 00:28:52 GMT
-      Content-Length:
-      - '278'
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>168160</queryID>\r\n
-        \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
-    http_version: 
-  recorded_at: Sat, 09 Aug 2014 00:28:53 GMT
-- request:
-    method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/168160?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Sat, 09 Aug 2014 00:28:53 GMT
-      Content-Length:
-      - '148'
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
-    http_version: 
-  recorded_at: Sat, 09 Aug 2014 00:28:53 GMT
-- request:
-    method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: US-ASCII
@@ -477,4 +370,148 @@ http_interactions:
         IdType=\"pubmed\">24930130</ArticleId>\n        </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
   recorded_at: Sat, 09 Aug 2014 00:28:53 GMT
+- request:
+    method: post
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>&lt;query
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"&gt;\n\t
+        \           &lt;Criterion ConjunctionOperator=\"AND\"&gt;\n\t              &lt;Criteria&gt;\n\t
+        \               &lt;Criterion&gt;\n\t                  &lt;Filter&gt;\n\t
+        \                   &lt;Column&gt;PMID&lt;/Column&gt;\n\t                    &lt;Operator&gt;In&lt;/Operator&gt;\n\t
+        \                   &lt;Values&gt;&lt;Value&gt;24930130&lt;/Value&gt;&lt;/Values&gt;\n\t
+        \                 &lt;/Filter&gt;\n\t                &lt;/Criterion&gt;\n\t
+        \             &lt;/Criteria&gt;\n\t            &lt;/Criterion&gt;\n\t            &lt;Columns&gt;\n\t
+        \             &lt;SortColumn&gt;\n\t                &lt;Column&gt;Rank&lt;/Column&gt;\n\t
+        \               &lt;Direction&gt;Descending&lt;/Direction&gt;\n\t              &lt;/SortColumn&gt;\n\t
+        \           &lt;/Columns&gt;\n\t            &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;\n\t
+        \         &lt;/query&gt;</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Sat, 06 Dec 2014 02:06:27 GMT
+      Content-Length:
+      - '278'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>168160</queryID>\r\n
+        \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
+    http_version: 
+  recorded_at: Sat, 06 Dec 2014 02:06:28 GMT
+- request:
+    method: get
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/168160?format=xml&page=0&pageSize=2147483647&v=version/3
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Content-Type:
+      - text/xml
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Sat, 06 Dec 2014 02:06:28 GMT
+      Content-Length:
+      - '3622'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
+        \   <PublicationItemID>67444125</PublicationItemID>\r\n    <Title>Chemically
+        defined generation of human cardiomyocytes</Title>\r\n    <Abstract>Existing
+        methods for human induced pluripotent stem cell (hiPSC) cardiac differentiation
+        are efficient but require complex, undefined medium constituents that hinder
+        further elucidation of the molecular mechanisms of cardiomyogenesis. Using
+        hiPSCs derived under chemically defined conditions on synthetic matrices,
+        we systematically developed an optimized cardiac differentiation strategy,
+        using a chemically defined medium consisting of just three components: the
+        basal medium RPMI 1640, L-ascorbic acid 2-phosphate and rice-derived recombinant
+        human albumin. Along with small molecule based induction of differentiation,
+        this protocol produced contractile sheets of up to 95% TNNT2(+) cardiomyocytes
+        at a yield of up to 100 cardiomyocytes for every input pluripotent cell and
+        was effective in 11 hiPSC lines tested. This chemically defined platform for
+        cardiac specification of hiPSCs will allow the elucidation of cardiomyocyte
+        macromolecular and metabolic requirements and will provide a minimal system
+        for the study of maturation and subtype specification.</Abstract>\r\n    <AuthorList>Burridge,Paul,W|Matsa,Elena,|Shukla,Praveen,|Lin,Ziliang,C|Churko,Jared,M|Ebert,Antje,D|Lan,Feng,|Diecke,Sebastian,|Huber,Bruno,|Mordwinkin,Nicholas,M|Plews,Jordan,R|Abilez,Oscar,J|Cui,Bianxiao,|Gold,Joseph,D|Wu,Joseph,C</AuthorList>\r\n
+        \   <AuthorCount>15</AuthorCount>\r\n    <KeywordList>PROGENITOR CELLS|PLURIPOTENT
+        STEM-CELLS|CARDIOMYOGENESIS|MYOCYTES|SMALL-MOLECULE|CULTURE|EXPRESSION|THYRONINE|CARDIAC
+        DIFFERENTIATION|TERM SELF-RENEWAL</KeywordList>\r\n    <DocumentTypeList>Article</DocumentTypeList>\r\n
+        \   <DocumentCategory>Journal Document</DocumentCategory>\r\n    <NumberOfReferences>40</NumberOfReferences>\r\n
+        \   <TimesCited>1</TimesCited>\r\n    <TimesNotSelfCited>1</TimesNotSelfCited>\r\n
+        \   <PMID>24930130</PMID>\r\n    <WoSItemID>000340075600026</WoSItemID>\r\n
+        \   <PublicationSourceTitle>NATURE METHODS</PublicationSourceTitle>\r\n    <Volume>11</Volume>\r\n
+        \   <Issue>8</Issue>\r\n    <Pagination>855-860</Pagination>\r\n    <PublicationDate>2014-08-01T00:00:00</PublicationDate>\r\n
+        \   <PublicationYear>2014</PublicationYear>\r\n    <PublicationType>Journal</PublicationType>\r\n
+        \   <PublicationSubjectCategoryList>Biochemical Research Methods</PublicationSubjectCategoryList>\r\n
+        \   <ISSN>1548-7091</ISSN>\r\n    <DOI>10.1038/NMETH.2999</DOI>\r\n    <ConferenceStartDate
+        xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\" />\r\n    <Rank
+        xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n    <NormalizedRank
+        xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
+        \   <CopyrightPublisher>NATURE PUBLISHING GROUP</CopyrightPublisher>\r\n    <CopyrightCity>LONDON</CopyrightCity>\r\n
+        \   <PublicationImpactFactorList>23.565,2012,ClosestToPublicationYear|23.565,2012,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>1/75;BIOCHEMICAL RESEARCH METHODS;2012;SC;ClosestToPublicationYear|1/75;BIOCHEMICAL
+        RESEARCH METHODS;2012;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
+        \   <AuthorCitationCountList>1,0,1|2,0,1|3,0,1|4,0,1|5,0,1|6,0,1|7,0,1|8,0,1|9,0,1|10,0,1|11,0,1|12,0,1|13,0,1|14,0,1|15,0,1</AuthorCitationCountList>\r\n
+        \   <CopyrightStateProvince />\r\n    <CopyrightCountry>UNITED KINGDOM</CopyrightCountry>\r\n
+        \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
+    http_version: 
+  recorded_at: Sat, 06 Dec 2014 02:06:29 GMT
 recorded_with: VCR 2.5.0
