--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_mix.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_mix.yml
@@ -1,136 +1,8 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82298?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Thu, 19 Sep 2013 20:34:32 GMT
-      Content-Length:
-      - '7466'
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
-        \   <PublicationItemID>60524632</PublicationItemID>\r\n    <Title>Biaxially-textured
-        photovoltaic film crystal silicon on ion beam assisted deposition CaF2 seed
-        layers on glass</Title>\r\n    <Abstract>We grow biaxially textured heteroepitaxial
-        crystal silicon (c-Si) films on display glass as a low-cost photovoltaic material.
-        We first fabricate textured CaF2 seed layers using ion-beam assisted deposition,
-        then coat the CaF2 with a thin, evaporated epitaxial Ge buffer and finally
-        deposit heteroepitaxial silicon on the Ge. The silicon is grown by hot-wire
-        chemical vapor deposition, a high-rate, scalable epitaxy technology. Electron
-        and X-ray diffraction confirm the biaxial texture of the CaF2 and epitaxial
-        growth of the subsequent layers. Transmission electron microscopy reveals
-        columnar silicon grains about 500 nm across. We fabricate a proof-of-concept
-        epitaxial film c-Si solar cell with an open circuit voltage of 375 mV that
-        is limited by minority carrier lifetime.</Abstract>\r\n    <AuthorList>Groves,James,R|Li,Joel,B|Clemens,Bruce,M|LaSalvia,Vincenzo,|Hasoon,Falah,|Branz,Howard,M|Teplin,Charles,W</AuthorList>\r\n
-        \   <AuthorCount>7</AuthorCount>\r\n    <KeywordList>NI|ROUTE|SOLAR-CELLS|DISLOCATION
-        DENSITY|ALUMINUM-INDUCED CRYSTALLIZATION</KeywordList>\r\n    <DocumentTypeList>Article</DocumentTypeList>\r\n
-        \   <DocumentCategory>Journal Document</DocumentCategory>\r\n    <NumberOfReferences>23</NumberOfReferences>\r\n
-        \   <TimesCited>2</TimesCited>\r\n    <TimesNotSelfCited>2</TimesNotSelfCited>\r\n
-        \   <PMID xsi:nil=\"true\" />\r\n    <WoSItemID>000303251500027</WoSItemID>\r\n
-        \   <PublicationSourceTitle>ENERGY &amp; ENVIRONMENTAL SCIENCE</PublicationSourceTitle>\r\n
-        \   <Volume>5</Volume>\r\n    <Issue>5</Issue>\r\n    <Pagination>6905-6908</Pagination>\r\n
-        \   <PublicationDate>2012-05-01T00:00:00</PublicationDate>\r\n    <PublicationYear>2012</PublicationYear>\r\n
-        \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Chemistry,
-        Multidisciplinary|Energy &amp; Fuels|Engineering, Chemical|Environmental Sciences</PublicationSubjectCategoryList>\r\n
-        \   <ISSN>1754-5692</ISSN>\r\n    <DOI>10.1039/c2ee21097e</DOI>\r\n    <ConferenceStartDate
-        xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\" />\r\n    <Rank
-        xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n    <NormalizedRank
-        xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
-        \   <CopyrightPublisher>ROYAL SOC CHEMISTRY</CopyrightPublisher>\r\n    <CopyrightCity>CAMBRIDGE</CopyrightCity>\r\n
-        \   <PublicationImpactFactorList>9.61,2011,ClosestToPublicationYear|9.61,2011,MostRecentYear</PublicationImpactFactorList>\r\n
-        \   <PublicationCategoryRankingList>12/149;CHEMISTRY, MULTIDISCIPLINARY;2011;SC;ClosestToPublicationYear|3/79;ENERGY
-        &amp; FUELS;2011;SC;ClosestToPublicationYear|3/132;ENGINEERING, CHEMICAL;2011;SC;ClosestToPublicationYear|1/203;ENVIRONMENTAL
-        SCIENCES;2011;SC;ClosestToPublicationYear|12/149;CHEMISTRY, MULTIDISCIPLINARY;2011;SC;MostRecentYear|3/79;ENERGY
-        &amp; FUELS;2011;SC;MostRecentYear|3/132;ENGINEERING, CHEMICAL;2011;SC;MostRecentYear|1/203;ENVIRONMENTAL
-        SCIENCES;2011;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,2|2,0,2|3,0,2|4,0,2|5,0,2|6,0,2|7,0,2</AuthorCitationCountList>\r\n
-        \   <CopyrightStateProvince>CAMBS</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
-        KINGDOM</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
-        \   <PublicationItemID>62352332</PublicationItemID>\r\n    <Title>Mn3O4 Supported
-        on Glassy Carbon: An Active Non-Precious Metal Catalyst for the Oxygen Reduction
-        Reaction</Title>\r\n    <Abstract>In this work, we explore the interplay between
-        manganese oxide (MnOx) nanomaterials and a glassy carbon (GC) support in catalyzing
-        the oxygen reduction reaction (ORR) in an alkaline environment. Initially,
-        we characterize the ORR activity of bare GC electrodes as a function of heat
-        treatments in air, and find that ORR activity increases with increasing temperature
-        up to 500 degrees C. Modification of GC with size-selected 1 nm MnOx nanoparticles
-        prior to the 500 degrees C heat treatment yields a highly porous GC (pGC)
-        structure, devoid of MnOx. This pGC sample exhibits the highest ORR performance
-        of the bare carbon electrodes reaching an onset potential of 0.75 V vs the
-        reversible hydrogen electrode (RHE) and a complete 2-electron reduction of
-        oxygen to peroxide. Having established ORR activity of bare GC electrodes,
-        we deposit size-selected 14 nm MnO nanoparticles onto the GC and pGC electrodes
-        and then incite phase changes in MnO through heat treatments in air. Electrochemical
-        characterization of the resulting electrodes reveals that MnO nanoparticles
-        offer no improvement in the ORR onset potential over bare GC or pGC and only
-        slightly increase the number of electrons transferred. By contrast, thermal
-        oxidation of MnO nanoparticles to Mn3O4 at 500 degrees C, confirmed by Mn
-        L-edge X-ray absorption spectroscopy, results in an improved ORR onset potential
-        of 0.80 V and a 4-electron reduction of oxygen. Thus at low overpotentials,
-        where GC and pGC were inactive for the ORR, MnOx sites must contribute to
-        all steps of the reaction. The catalyst's estimated specific activity of 3700
-        mu A.cm(cat)(-2), at 0.75 V compares favorably with specific activities of
-        Pt/C as well as the best nonprecious metal catalysts. This establishes Mn3O4
-        as another MnOx phase with high activity for the ORR.</Abstract>\r\n    <AuthorList>Gorlin,Yelena,|Chung,Chia-Jung,|Nordlund,Dennis,|Clemens,Bruce,M|Jaramillo,Thomas,F</AuthorList>\r\n
-        \   <AuthorCount>5</AuthorCount>\r\n    <KeywordList>WATER OXIDATION|DIOXYGEN
-        REDUCTION|RAY-ABSORPTION SPECTROSCOPY|ELECTRON-TRANSFER|SURFACE|ELECTROCATALYTIC
-        ACTIVITY|MANGANESE OXIDES|AIR BATTERIES|ELECTROCHEMICAL-BEHAVIOR|ALKALINE
-        MEDIA|oxygen reduction reaction|glassy carbon|manganese oxide|nanoparticles|X-ray
-        absorption spectroscopy</KeywordList>\r\n    <DocumentTypeList>Article</DocumentTypeList>\r\n
-        \   <DocumentCategory>Journal Document</DocumentCategory>\r\n    <NumberOfReferences>52</NumberOfReferences>\r\n
-        \   <TimesCited>1</TimesCited>\r\n    <TimesNotSelfCited>1</TimesNotSelfCited>\r\n
-        \   <PMID xsi:nil=\"true\" />\r\n    <WoSItemID>000312170100030</WoSItemID>\r\n
-        \   <PublicationSourceTitle>ACS CATALYSIS</PublicationSourceTitle>\r\n    <Volume>2</Volume>\r\n
-        \   <Issue>12</Issue>\r\n    <Pagination>2687-2694</Pagination>\r\n    <PublicationDate>2012-12-01T00:00:00</PublicationDate>\r\n
-        \   <PublicationYear>2012</PublicationYear>\r\n    <PublicationType>Journal</PublicationType>\r\n
-        \   <PublicationSubjectCategoryList>Chemistry, Physical</PublicationSubjectCategoryList>\r\n
-        \   <ISSN>2155-5435</ISSN>\r\n    <DOI>10.1021/cs3004352</DOI>\r\n    <ConferenceStartDate
-        xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\" />\r\n    <Rank
-        xsi:nil=\"true\" />\r\n    <OrdinalRank>1</OrdinalRank>\r\n    <NormalizedRank
-        xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
-        \   <CopyrightPublisher>AMER CHEMICAL SOC</CopyrightPublisher>\r\n    <CopyrightCity>WASHINGTON</CopyrightCity>\r\n
-        \   <AuthorCitationCountList>1,0,1|2,0,1|3,0,1|4,0,1|5,0,1</AuthorCitationCountList>\r\n
-        \   <CopyrightStateProvince>DC</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
-        STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
-    http_version: 
-  recorded_at: Thu, 19 Sep 2013 20:34:33 GMT
-- request:
     method: post
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
@@ -151,7 +23,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
       Expect:
@@ -176,19 +48,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 21:33:22 GMT
+      - Mon, 27 Apr 2015 22:07:15 GMT
       Content-Length:
-      - '278'
+      - '277'
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>136741</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>79591</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:24 GMT
+  recorded_at: Mon, 27 Apr 2015 22:07:17 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/136741?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/79591?format=xml&page=0&pageSize=2147483647&v=version/3
     body:
       encoding: US-ASCII
       string: ''
@@ -202,7 +74,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
   response:
@@ -223,7 +95,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 21:33:24 GMT
+      - Mon, 27 Apr 2015 22:07:15 GMT
       Content-Length:
       - '3087'
     body:
@@ -266,7 +138,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:24 GMT
+  recorded_at: Mon, 27 Apr 2015 22:07:18 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -284,7 +156,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 27 Apr 2015 21:33:24 GMT
+      - Mon, 27 Apr 2015 22:07:17 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -292,12 +164,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFD740453EAB241_0495SID
+      - 9DFC3A8353EB3151_0461SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFD740453EAB241_0495SID; domain=.nih.gov; path=/; expires=Wed, 27
-        Apr 2016 21:33:24 GMT
+      - ncbi_sid=9DFC3A8353EB3151_0461SID; domain=.nih.gov; path=/; expires=Wed, 27
+        Apr 2016 22:07:17 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -310,5 +182,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:25 GMT
+  recorded_at: Mon, 27 Apr 2015 22:07:18 GMT
 recorded_with: VCR 2.5.0
