--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_no_pubmed.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_no_pubmed.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
@@ -23,7 +23,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
       Expect:
@@ -48,19 +48,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 21:33:41 GMT
+      - Mon, 27 Apr 2015 22:06:49 GMT
       Content-Length:
       - '277'
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>82248</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>79588</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:42 GMT
+  recorded_at: Mon, 27 Apr 2015 22:06:51 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82248?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/79588?format=xml&page=0&pageSize=2147483647&v=version/3
     body:
       encoding: US-ASCII
       string: ''
@@ -74,7 +74,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
   response:
@@ -95,7 +95,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 21:33:41 GMT
+      - Mon, 27 Apr 2015 22:06:53 GMT
       Content-Length:
       - '3567'
     body:
@@ -140,7 +140,7 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,5|2,0,5</AuthorCitationCountList>\r\n    <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:43 GMT
+  recorded_at: Mon, 27 Apr 2015 22:06:54 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -158,7 +158,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 27 Apr 2015 21:33:42 GMT
+      - Mon, 27 Apr 2015 22:06:53 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -166,12 +166,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFC480E53EAB361_0290SID
+      - 08DD0E2153EB2FD1_0904SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC480E53EAB361_0290SID; domain=.nih.gov; path=/; expires=Wed, 27
-        Apr 2016 21:33:42 GMT
+      - ncbi_sid=08DD0E2153EB2FD1_0904SID; domain=.nih.gov; path=/; expires=Wed, 27
+        Apr 2016 22:06:53 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -184,5 +184,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:43 GMT
+  recorded_at: Mon, 27 Apr 2015 22:06:55 GMT
 recorded_with: VCR 2.5.0
