--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_to_sw_for_author.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_to_sw_for_author.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
@@ -23,7 +23,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
       Expect:
@@ -48,19 +48,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 21:33:38 GMT
+      - Mon, 27 Apr 2015 22:06:54 GMT
       Content-Length:
       - '277'
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>79589</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:40 GMT
+  recorded_at: Mon, 27 Apr 2015 22:06:55 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/79589?format=xml&page=0&pageSize=2147483647&v=version/3
     body:
       encoding: US-ASCII
       string: ''
@@ -74,7 +74,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
   response:
@@ -95,7 +95,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 21:33:39 GMT
+      - Mon, 27 Apr 2015 22:06:54 GMT
       Content-Length:
       - '9640'
     body:
@@ -213,7 +213,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:41 GMT
+  recorded_at: Mon, 27 Apr 2015 22:06:56 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -231,7 +231,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 27 Apr 2015 21:33:40 GMT
+      - Mon, 27 Apr 2015 22:06:55 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -239,12 +239,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE47EB53EAB341_0730SID
+      - 08DD2B6D53EB2FF1_0668SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE47EB53EAB341_0730SID; domain=.nih.gov; path=/; expires=Wed, 27
-        Apr 2016 21:33:40 GMT
+      - ncbi_sid=08DD2B6D53EB2FF1_0668SID; domain=.nih.gov; path=/; expires=Wed, 27
+        Apr 2016 22:06:55 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -645,5 +645,5 @@ http_interactions:
         \           <ArticleId IdType=\"pubmed\">23635172</ArticleId>\n            <ArticleId
         IdType=\"pmc\">PMC3651261</ArticleId>\n        </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:33:41 GMT
+  recorded_at: Mon, 27 Apr 2015 22:06:56 GMT
 recorded_with: VCR 2.5.0
